--- a/themes/zola-academic/templates/index.html
+++ b/themes/zola-academic/templates/index.html
@@ -37,7 +37,7 @@
                                     <h4>TL;DR</h4>
                                     <ul class="no-bullets">
                                         {% for summary in config.extra.summary %}
-                                            <li><a href="{{ summary.link }}" style="font-size: {{ summary.iconsize }};"><i class="{{ summary.icon_pack }} {{ summary.icon }}"></i></a> <span style="font-size: {{ summary.fontsize }};"> {{ summary.text }}</span></li>
+                                            <li><a href="{{ summary.link }}" style="font-size: {{ summary.iconsize }}"><i class="{{ summary.icon_pack }} {{ summary.icon }}"></i></a> <span style="font-size: {{ summary.fontsize }}"> {{ summary.text }}</span></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -87,7 +87,11 @@
             <div class="content">
                 {% for page in section.pages %}
                 {% if page.relative_path == "projectExamples.md" %}
-                <h1>{{ page.title }}</h1>
+                <h1 class="title is-1" id="publications">
+                    <a class="has-text-{{ colors::style() }}" href="#/SelectedProjects">
+                        {{ page.title }}
+                    </a>
+                </h1>
                 {{ page.content | safe }}
                 {% endif %}
                 {% endfor %}
