--- a/themes/zola-academic/templates/page.html
+++ b/themes/zola-academic/templates/page.html
@@ -5,7 +5,7 @@
         <div class="columns is-desktop">
             <div class="column is-10 is-offset-1">
                 <div class="content">
-                    <h1>{{ page.title }}</h1>
+                    <h1 style="text-align: center;">{{ page.title }}</h1>
                     {{ page.content | safe }}
                 </div>
             </div>
