--- a/themes/zola-academic/templates/page.html
+++ b/themes/zola-academic/templates/page.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 {% block content %}
 <section class="section">
@@ -5,6 +6,7 @@
         <div class="columns is-desktop">
             <div class="column is-10 is-offset-1">
                 <div class="content">
+                    {# {% set assets_path = page.relative_path | split(pat="/") | reverse | slice(start=1) | reverse | join(sep="/") %} #}
                     <h1 style="text-align: center;">{{ page.title }}</h1>
                     {{ page.content | safe }}
                 </div>
