--- a/themes/zola-academic/bulma/sass/utilities/derived-variables.sass
+++ b/themes/zola-academic/bulma/sass/utilities/derived-variables.sass
@@ -42,14 +42,14 @@ $dark-invert: findColorInvert($dark) !default
 
 // General colors
 
-$scheme-main: $white !default
-$scheme-main-bis: $white-bis !default
-$scheme-main-ter: $white-ter !default
-$scheme-invert: $black !default
-$scheme-invert-bis: $black-bis !default
-$scheme-invert-ter: $black-ter !default
+$scheme-main: $black !default
+$scheme-main-bis: $black-bis !default
+$scheme-main-ter: $black-ter !default
+$scheme-invert: $white !default
+$scheme-invert-bis: $white-bis !default
+$scheme-invert-ter: $white-ter !default
 
-$background: $white-ter !default
+$background: $black-ter !default
 
 $border: $grey-lighter !default
 $border-hover: $grey-light !default
@@ -58,10 +58,10 @@ $border-light-hover: $grey-light !default
 
 // Text colors
 
-$text: $grey-dark !default
+$text: $grey-light !default
 $text-invert: findColorInvert($text) !default
 $text-light: $grey !default
-$text-strong: $grey-darker !default
+$text-strong: $grey-lighter !default
 
 // Code colors
 
