--- a/themes/zola-academic/templates/post.html
+++ b/themes/zola-academic/templates/post.html
@@ -15,7 +15,7 @@
                 {% endif %}
             </figure>
         </section> #}
-        <section class="section">
+        <section class="section" style="margin-top: 2rem;">
             <div class="container">
                 <div class="columns is-desktop">
                     <div class="column is-10 is-offset-3">
@@ -27,7 +27,7 @@
             </div>
         </section>
         {% elif page.extra.image.style == "figure" %}
-        <div class="columns">
+        <div class="columns" style="margin-top: 2rem;">
             <div class="column is-offset-1 is-10">
                 <div class="columns">
                     <div class="column is-one-half content">
@@ -48,7 +48,7 @@
         {% endif %}
         {% endif %}
 
-<section class="section">
+<section class="section"">
     <div class="container">
         <div class="columns is-desktop">
             <div class="column is-6-desktop is-offset-3-desktop is-12-tablet">
